src/parser/GrammarParser.java
// Generated from src\parser\Grammar.g4 by ANTLR 4.7.2
package parser;

    import ast.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, INT_CONSTANT=52, 
		REAL_CONSTANT=53, IDENT=54, CHAR_CONSTANT=55, LINE_COMMENT=56, MULTILINE_COMMENT=57, 
		WHITESPACE=58;
	public static final int
		RULE_start = 0, RULE_operacion = 1, RULE_defVar = 2, RULE_parametros = 3, 
		RULE_campo = 4, RULE_atributo = 5, RULE_sentencia = 6, RULE_casee = 7, 
		RULE_asigs = 8, RULE_expr = 9, RULE_params = 10, RULE_tipo = 11;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "operacion", "defVar", "parametros", "campo", "atributo", "sentencia", 
			"casee", "asigs", "expr", "params", "tipo"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'struct'", "'{'", "'}'", "';'", "'('", "')'", "':'", "'var'", 
			"','", "'if'", "'else'", "'while'", "'for'", "'++'", "'do'", "'switch'", 
			"'default'", "'read'", "'print'", "'printsp'", "'println'", "'return'", 
			"'='", "'+='", "'case'", "'break'", "'.'", "'['", "']'", "'<'", "'>'", 
			"'*'", "'/'", "'%'", "'+'", "'-'", "'=='", "'!='", "'<='", "'>='", "'!'", 
			"'&&'", "'||'", "'**'", "'true'", "'false'", "'?'", "'int'", "'float'", 
			"'char'", "'boolean'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, "INT_CONSTANT", "REAL_CONSTANT", "IDENT", "CHAR_CONSTANT", 
			"LINE_COMMENT", "MULTILINE_COMMENT", "WHITESPACE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class StartContext extends ParserRuleContext {
		public Programa ast;
		public OperacionContext operacion;
		public List<OperacionContext> listOperaciones = new ArrayList<OperacionContext>();
		public TerminalNode EOF() { return getToken(GrammarParser.EOF, 0); }
		public List<OperacionContext> operacion() {
			return getRuleContexts(OperacionContext.class);
		}
		public OperacionContext operacion(int i) {
			return getRuleContext(OperacionContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(27);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__7) | (1L << IDENT))) != 0)) {
				{
				{
				setState(24);
				((StartContext)_localctx).operacion = operacion();
				((StartContext)_localctx).listOperaciones.add(((StartContext)_localctx).operacion);
				}
				}
				setState(29);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(30);
			match(EOF);
			 ((StartContext)_localctx).ast =  new Programa(((StartContext)_localctx).listOperaciones); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperacionContext extends ParserRuleContext {
		public Operacion ast;
		public DefVarContext defVar;
		public Token IDENT;
		public CampoContext campo;
		public List<CampoContext> listCampos = new ArrayList<CampoContext>();
		public ParametrosContext parametros;
		public TipoContext tipo;
		public List<DefVarContext> listVar = new ArrayList<DefVarContext>();
		public SentenciaContext sentencia;
		public List<SentenciaContext> listSent = new ArrayList<SentenciaContext>();
		public List<DefVarContext> defVar() {
			return getRuleContexts(DefVarContext.class);
		}
		public DefVarContext defVar(int i) {
			return getRuleContext(DefVarContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public List<CampoContext> campo() {
			return getRuleContexts(CampoContext.class);
		}
		public CampoContext campo(int i) {
			return getRuleContext(CampoContext.class,i);
		}
		public ParametrosContext parametros() {
			return getRuleContext(ParametrosContext.class,0);
		}
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public OperacionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_operacion; }
	}

	public final OperacionContext operacion() throws RecognitionException {
		OperacionContext _localctx = new OperacionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_operacion);
		int _la;
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__7:
				enterOuterAlt(_localctx, 1);
				{
				setState(33);
				((OperacionContext)_localctx).defVar = defVar();
				 ((OperacionContext)_localctx).ast =  ((OperacionContext)_localctx).defVar.ast; 
				}
				break;
			case T__0:
				enterOuterAlt(_localctx, 2);
				{
				setState(36);
				match(T__0);
				setState(37);
				((OperacionContext)_localctx).IDENT = match(IDENT);
				setState(38);
				match(T__1);
				setState(42);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==IDENT) {
					{
					{
					setState(39);
					((OperacionContext)_localctx).campo = campo();
					((OperacionContext)_localctx).listCampos.add(((OperacionContext)_localctx).campo);
					}
					}
					setState(44);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(45);
				match(T__2);
				setState(46);
				match(T__3);
				 ((OperacionContext)_localctx).ast =  new DefStruct(((OperacionContext)_localctx).IDENT, ((OperacionContext)_localctx).listCampos); 
				}
				break;
			case IDENT:
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				((OperacionContext)_localctx).IDENT = match(IDENT);
				setState(49);
				match(T__4);
				setState(50);
				((OperacionContext)_localctx).parametros = parametros();
				setState(51);
				match(T__5);
				setState(54);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==T__6) {
					{
					setState(52);
					match(T__6);
					setState(53);
					((OperacionContext)_localctx).tipo = tipo();
					}
				}

				setState(56);
				match(T__1);
				setState(60);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__7) {
					{
					{
					setState(57);
					((OperacionContext)_localctx).defVar = defVar();
					((OperacionContext)_localctx).listVar.add(((OperacionContext)_localctx).defVar);
					}
					}
					setState(62);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(66);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__29) | (1L << T__40) | (1L << T__44) | (1L << T__45) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					{
					setState(63);
					((OperacionContext)_localctx).sentencia = sentencia();
					((OperacionContext)_localctx).listSent.add(((OperacionContext)_localctx).sentencia);
					}
					}
					setState(68);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(69);
				match(T__2);
				 ((OperacionContext)_localctx).ast =  new DefFuncion(((OperacionContext)_localctx).IDENT, ((OperacionContext)_localctx).parametros.list, _localctx.tipo != null ? ((OperacionContext)_localctx).tipo.ast : new VoidType(), ((OperacionContext)_localctx).listVar, ((OperacionContext)_localctx).listSent); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DefVarContext extends ParserRuleContext {
		public DefVariable ast;
		public AtributoContext atributo;
		public AtributoContext atributo() {
			return getRuleContext(AtributoContext.class,0);
		}
		public DefVarContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_defVar; }
	}

	public final DefVarContext defVar() throws RecognitionException {
		DefVarContext _localctx = new DefVarContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_defVar);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			match(T__7);
			setState(75);
			((DefVarContext)_localctx).atributo = atributo();
			setState(76);
			match(T__3);
			 ((DefVarContext)_localctx).ast =  ((DefVarContext)_localctx).atributo.ast; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametrosContext extends ParserRuleContext {
		public List<DefVariable> list = new ArrayList<DefVariable>();
		public AtributoContext atributo;
		public List<AtributoContext> atributo() {
			return getRuleContexts(AtributoContext.class);
		}
		public AtributoContext atributo(int i) {
			return getRuleContext(AtributoContext.class,i);
		}
		public ParametrosContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parametros; }
	}

	public final ParametrosContext parametros() throws RecognitionException {
		ParametrosContext _localctx = new ParametrosContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_parametros);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENT) {
				{
				setState(79);
				((ParametrosContext)_localctx).atributo = atributo();
				 _localctx.list.add(((ParametrosContext)_localctx).atributo.ast); 
				setState(87);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==T__8) {
					{
					{
					setState(81);
					match(T__8);
					setState(82);
					((ParametrosContext)_localctx).atributo = atributo();
					 _localctx.list.add(((ParametrosContext)_localctx).atributo.ast); 
					}
					}
					setState(89);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CampoContext extends ParserRuleContext {
		public Campo ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public CampoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_campo; }
	}

	public final CampoContext campo() throws RecognitionException {
		CampoContext _localctx = new CampoContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_campo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			((CampoContext)_localctx).IDENT = match(IDENT);
			setState(93);
			match(T__6);
			setState(94);
			((CampoContext)_localctx).tipo = tipo();
			setState(95);
			match(T__3);
			 ((CampoContext)_localctx).ast =  new Campo(((CampoContext)_localctx).tipo.ast, ((CampoContext)_localctx).IDENT); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AtributoContext extends ParserRuleContext {
		public DefVariable ast;
		public Token IDENT;
		public TipoContext tipo;
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public TipoContext tipo() {
			return getRuleContext(TipoContext.class,0);
		}
		public AtributoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_atributo; }
	}

	public final AtributoContext atributo() throws RecognitionException {
		AtributoContext _localctx = new AtributoContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_atributo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			((AtributoContext)_localctx).IDENT = match(IDENT);
			setState(99);
			match(T__6);
			setState(100);
			((AtributoContext)_localctx).tipo = tipo();
			 ((AtributoContext)_localctx).ast =  new DefVariable(((AtributoContext)_localctx).tipo.ast, ((AtributoContext)_localctx).IDENT); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SentenciaContext extends ParserRuleContext {
		public Sentencia ast;
		public ExprContext expr;
		public SentenciaContext sentencia;
		public List<SentenciaContext> listSentIfSimple = new ArrayList<SentenciaContext>();
		public List<SentenciaContext> listSentIf = new ArrayList<SentenciaContext>();
		public List<SentenciaContext> listSentElse = new ArrayList<SentenciaContext>();
		public List<SentenciaContext> listSentWhile = new ArrayList<SentenciaContext>();
		public SentenciaContext s;
		public ExprContext e;
		public List<SentenciaContext> list = new ArrayList<SentenciaContext>();
		public CaseeContext casee;
		public List<CaseeContext> cases = new ArrayList<CaseeContext>();
		public Token g;
		public Token h;
		public Token i;
		public Token p;
		public ExprContext a;
		public ExprContext b;
		public ExprContext aa;
		public ExprContext bb;
		public Token IDENT;
		public ParamsContext params;
		public AsigsContext asigs;
		public ExprContext c;
		public List<ExprContext> expr() {
			return getRuleContexts(ExprContext.class);
		}
		public ExprContext expr(int i) {
			return getRuleContext(ExprContext.class,i);
		}
		public List<SentenciaContext> sentencia() {
			return getRuleContexts(SentenciaContext.class);
		}
		public SentenciaContext sentencia(int i) {
			return getRuleContext(SentenciaContext.class,i);
		}
		public List<CaseeContext> casee() {
			return getRuleContexts(CaseeContext.class);
		}
		public CaseeContext casee(int i) {
			return getRuleContext(CaseeContext.class,i);
		}
		public TerminalNode IDENT() { return getToken(GrammarParser.IDENT, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public AsigsContext asigs() {
			return getRuleContext(AsigsContext.class,0);
		}
		public SentenciaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_sentencia; }
	}

	public final SentenciaContext sentencia() throws RecognitionException {
		SentenciaContext _localctx = new SentenciaContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_sentencia);
		int _la;
		try {
			setState(277);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,21,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103);
				match(T__9);
				setState(104);
				match(T__4);
				setState(105);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(106);
				match(T__5);
				setState(107);
				match(T__1);
				setState(111);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__29) | (1L << T__40) | (1L << T__44) | (1L << T__45) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					{
					setState(108);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).listSentIfSimple.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(113);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(114);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new If(((SentenciaContext)_localctx).expr.ast, ((SentenciaContext)_localctx).listSentIfSimple); 
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				match(T__9);
				setState(118);
				match(T__4);
				setState(119);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(120);
				match(T__5);
				setState(121);
				match(T__1);
				setState(125);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__29) | (1L << T__40) | (1L << T__44) | (1L << T__45) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					{
					setState(122);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).listSentIf.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(127);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(128);
				match(T__2);
				setState(129);
				match(T__10);
				setState(130);
				match(T__1);
				setState(134);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__29) | (1L << T__40) | (1L << T__44) | (1L << T__45) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					{
					setState(131);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).listSentElse.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(136);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(137);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new Ifelse(((SentenciaContext)_localctx).expr.ast, ((SentenciaContext)_localctx).listSentIf, ((SentenciaContext)_localctx).listSentElse); 
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(140);
				match(T__11);
				setState(141);
				match(T__4);
				setState(142);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(143);
				match(T__5);
				setState(144);
				match(T__1);
				setState(148);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__29) | (1L << T__40) | (1L << T__44) | (1L << T__45) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					{
					setState(145);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).listSentWhile.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(150);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(151);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new While(((SentenciaContext)_localctx).expr.ast, ((SentenciaContext)_localctx).listSentWhile); 
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(154);
				match(T__12);
				setState(155);
				match(T__4);
				setState(156);
				((SentenciaContext)_localctx).s = sentencia();
				setState(157);
				((SentenciaContext)_localctx).e = ((SentenciaContext)_localctx).expr = expr(0);
				setState(158);
				match(T__3);
				setState(159);
				((SentenciaContext)_localctx).expr = expr(0);
				setState(160);
				match(T__13);
				setState(161);
				match(T__5);
				setState(162);
				match(T__1);
				setState(166);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__29) | (1L << T__40) | (1L << T__44) | (1L << T__45) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					{
					setState(163);
					((SentenciaContext)_localctx).sentencia = sentencia();
					((SentenciaContext)_localctx).list.add(((SentenciaContext)_localctx).sentencia);
					}
					}
					setState(168);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(169);
				match(T__2);
				 ((SentenciaContext)_localctx).ast =  new For(((SentenciaContext)_localctx).s.ast, ((SentenciaContext)_localctx).e.ast, new OperadorMasMas(((SentenciaContext)_localctx).expr.ast), ((SentenciaContext)_localctx).list); 
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(172);
				match(T__14);
				setState(173);
				match(T__1);
				setState(177);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__4) | (1L << T__9) | (1L << T__11) | (1L << T__12) | (1L << T__14) | (1L << T__15) | (1L << T__17) | (1L << T__18) | (1L << T__19) | (1L << T__20) | (1L << T__21) | (1L << T__22) | (1L << T__29) | (1L << T__40) | (1L << T__44) | (1L << T__45) | (1L << INT_CONSTANT) | (1L << REAL_CONSTANT) | (1L << IDENT) | (1L << CHAR_CONSTANT))) != 0)) {
					{
					{
					setState(174);
					((SentenciaContext)_localctx).sentencia = sentencia();
